fix: text wrapping on long channel
Broke with a previous commit

--- a/src/renderer/scss/component/_media.scss
+++ b/src/renderer/scss/component/_media.scss
@@ -235,7 +235,8 @@
 
   // Quick fix to fix channel overlapping on the home page. This style shouldn't exist here.
   .btn--uri-indicator {
-    width: max-content;
+    width: fit-content;
+    max-width: 100%;
     text-align: left;
     overflow: hidden;
     text-overflow: ellipsis;
